--- a/config.org
+++ b/config.org
@@ -255,13 +255,11 @@ Evil-leader keyboard bindings
     ","  'other-window
     "."  'mode-line-other-buffer
     ":"  'eval-expression
-    ;; "b"  'helm-mini             ;; Switch to another buffer
-    ;; "B"  'magit-blame-toggle
+    "b"  'helm-mini             ;; Switch to another buffer
     "c"  'comment-dwim
-    "d"  'kill-this-buffer
-    ;; "f"  'helm-imenu            ;; Jump to function in buffer
+    "d"  'helm-imenu            ;; Jump to function in buffer
     "g"  'magit-status
-    ;; "p"  'helm-show-kill-ring
+    "p"  'helm-show-kill-ring
     ;; "s"  'ag-project            ;; Ag search from project's root
     ;; "y" 'yank-to-x-clipboard
     "o"  'delete-other-windows  ;; C-w o
