--- a/config.org
+++ b/config.org
@@ -445,6 +445,55 @@ Magit for git revision control
   :diminish git-gutter-mode
   :config (global-git-gutter-mode))
 #+END_SRC
+** helm
+#+BEGIN_SRC emacs-lisp
+(use-package helm
+ :ensure t
+ :bind (("M-x" . helm-M-x)
+        ("C-x C-f" . helm-find-files)
+        ("C-x f" . helm-recentf)
+        ("C-SPC" . helm-dabbrev))
+ :bind (:map helm-map
+	      ("M-i" . helm-previous-line)
+	      ("M-k" . helm-next-line)
+	      ("M-I" . helm-previous-page)
+	      ("M-K" . helm-next-page)
+	      ("M-h" . helm-beginning-of-buffer)
+	      ("M-H" . helm-end-of-buffer))
+ :config (progn
+	    (helm-mode 1)))
+#+END_SRC
+** company-mode
+Modular in-buffer completion framework for Emacs
+[[http://company-mode.github.io/][Reference]]
+
+#+BEGIN_SRC emacs-lisp
+(use-package company
+  :diminish company-mode
+  :ensure t
+  :config
+  (add-hook 'after-init-hook 'global-company-mode)
+  (setq
+   company-echo-delay 0
+   company-idle-delay 0.2
+   company-minimum-prefix-length 1
+   company-tooltip-align-annotations t
+   company-tooltip-limit 20)
+  ;; Default colors are awful - borrowed these from gocode (thanks!):
+  ;; https://github.com/nsf/gocode/tree/master/emacs-company#color-customization
+  (set-face-attribute
+   'company-preview nil :foreground "black" :underline t)
+  (set-face-attribute
+   'company-preview-common nil :inherit 'company-preview)
+  (set-face-attribute
+   'company-tooltip nil :background "lightgray" :foreground "black")
+  (set-face-attribute
+   'company-tooltip-selection nil :background "steelblue" :foreground "white")
+  (set-face-attribute
+   'company-tooltip-common nil :foreground "darkgreen" :weight 'bold)
+  (set-face-attribute
+   'company-tooltip-common-selection nil :foreground "black" :weight 'bold))
+#+END_SRC
 * Key bindings
 
 Save buffer with ctrl-s
