mu4e working config

--- a/config.org
+++ b/config.org
@@ -561,6 +561,50 @@ prevent company from completing on its own when we type Space or dot
              htmlize-many-files-dired
              htmlize-region))
 #+END_SRC
+** mu4e
+- Dependencies
+	- libtool
+	- automake
+	- autoconf
+
+- Reference
+	- [[https://www.djcbsoftware.nl/code/mu/mu4e/Installation.html][mu4e]]
+	- [[https://ryanmcconville.com/blog/post/offlineimap-with-outlook365/][offlineimap-office365]]
+	- [[http://prodissues.com/2016/02/adding-mu4e-support-to-emacs.html][mu4e, tutorial]]
+
+#+BEGIN_SRC emacs-lisp
+(add-to-list 'load-path "/usr/local/share/emacs/site-lisp/mu4e")
+(setq mu4e-mu-binary (executable-find "/usr/local/bin/mu"))
+(require 'mu4e)
+
+;; default
+(setq mu4e-maildir "~/Mail/sm")
+;;(setq mu4e-drafts-folder "/[Gmail].Drafts")
+;;(setq mu4e-sent-folder   "/[Gmail].Sent Mail")
+;;(setq mu4e-trash-folder  "/[Gmail].Trash")
+;;(setq mu4e-refile-folder  "/[Gmail].All Mail")
+
+;; don't save message to Sent Messages, Gmail/IMAP takes care of this
+(setq mu4e-sent-messages-behavior 'delete)
+
+;; (See the documentation for `mu4e-sent-messages-behavior' if you have
+;; additional non-Gmail addresses and want assign them different
+;; behavior.)
+
+;; setup some handy shortcuts
+;; you can quickly switch to your Inbox -- press ``ji''
+;; then, when you want archive some messages, move them to
+;; the 'All Mail' folder by pressing ``ma''.
+
+(setq mu4e-maildir-shortcuts
+    '( ("/INBOX"               . ?i)
+       ("/[Gmail].Sent Mail"   . ?s)
+       ("/[Gmail].Trash"       . ?t)
+       ("/[Gmail].All Mail"    . ?a)))
+
+;; allow for updating mail using 'U' in the main view:
+(setq mu4e-get-mail-command "offlineimap")
+#+END_SRC
 * Key bindings
 
 Save buffer with ctrl-s
