--- a/config.org
+++ b/config.org
@@ -584,9 +584,6 @@ prevent company from completing on its own when we type Space or dot
 ;;(setq mu4e-trash-folder  "/[Gmail].Trash")
 ;;(setq mu4e-refile-folder  "/[Gmail].All Mail")
 
-;; don't save message to Sent Messages, Gmail/IMAP takes care of this
-(setq mu4e-sent-messages-behavior 'delete)
-
 ;; (See the documentation for `mu4e-sent-messages-behavior' if you have
 ;; additional non-Gmail addresses and want assign them different
 ;; behavior.)
@@ -604,6 +601,79 @@ prevent company from completing on its own when we type Space or dot
 
 ;; allow for updating mail using 'U' in the main view:
 (setq mu4e-get-mail-command "offlineimap")
+#+END_SRC
+*** offlineimaprc
+#+BEGIN_SRC
+# Sample minimal config file.  Copy this to ~/.offlineimaprc and edit to
+# get started fast.
+
+[general]
+accounts = Test
+pythonfile = ~/.offlineimap.py
+
+[Account Test]
+localrepository = Local
+remoterepository = Remote
+maxage=2
+
+[Repository Local]
+type = Maildir
+localfolders = ~/Mail/sm
+
+[Repository Remote]
+type = IMAP
+remoteuser = sarath.m@tataelxsi.co.in
+remotepasseval = mailpasswd('pwd')
+remotehost = outlook.office365.com
+remoteport = 993
+realdelete = no
+folderfilter = lambda folder: folder in ['INBOX', 'Sent', 'Sent Items']
+## Try one of the following for Ubuntu or Arch:
+sslcacertfile = /etc/ssl/certs/ca-certificates.crt
+# sslcacertfile = OS-DEFAULT
+#+END_SRC
+*** TLS config
+#+BEGIN_SRC emacs-lisp
+(require 'starttls)
+(setq starttls-use-gnutls t)
+#+END_SRC
+*** Outgoing mail settings
+#+BEGIN_SRC emacs-lisp
+(require 'smtpmail)
+(setq send-mail-function  'smtpmail-send-it
+      message-send-mail-function    'smtpmail-send-it
+      smtpmail-auth-credentials     (expand-file-name "~/.authinfo")
+      smtpmail-smtp-server  "smtp.office365.com"
+      smtpmail-stream-type  'starttls
+      smtpmail-smtp-service 587)
+#+END_SRC
+*** Default mail settings
+general emacs mail settings; used when composing e-mail.
+The non-mu4e-* stuff is inherited from emacs/message-mode
+#+BEGIN_SRC emacs-lisp
+(setq mu4e-reply-to-address "sarath.m@tataelxsi.co.in"
+      user-mail-address "sarath.m@tataelxsi.co.in"
+      user-full-name  "Sarath.M")
+(setq mu4e-compose-signature
+   "Sarath.M\nSenior Engineer\nTata Elxsi")
+#+END_SRC
+*** Kill message buffers on exit
+#+BEGIN_SRC emacs-lisp
+(setq message-kill-buffer-on-exit t)
+#+END_SRC
+*** Encrypt OfflineIMAP and msmtp password with GnuPG
+- [[http://f-koehler.github.io/posts/2015-03-17-offlineimap-msmtp-gnupg.html][Reference]]
+1. Put this code in home folder
+#+BEGIN_SRC python
+  import subprocess                                                             
+                                                                                
+  def mailpasswd():                                                             
+      path = "/home/sm/.mail_pwd.gpg"                                           
+      return subprocess.check_output(["gpg2", "--quiet", "--batch", "-d",       
+  path]).strip()                                                                
+
+  if __name__ == '__main__':                                                    
+      mailpasswd() 
 #+END_SRC
 * Key bindings
 
