--- a/config.org
+++ b/config.org
@@ -497,6 +497,14 @@ Magit for git revision control
   :diminish git-gutter-mode
   :config (global-git-gutter-mode))
 #+END_SRC
+** DISABLED projectile
+#+BEGIN_SRC emacs-lisp
+(use-package projectile
+  :ensure t
+  :config
+  (projectile-global-mode)
+(setq projectile-enable-caching t))
+#+END_SRC
 ** helm
 #+BEGIN_SRC emacs-lisp
 (use-package helm
@@ -505,15 +513,31 @@ Magit for git revision control
         ("C-x C-f" . helm-find-files)
         ("C-x f" . helm-recentf)
         ("C-SPC" . helm-dabbrev))
- :bind (:map helm-map
-	      ("M-i" . helm-previous-line)
-	      ("M-k" . helm-next-line)
-	      ("M-I" . helm-previous-page)
-	      ("M-K" . helm-next-page)
-	      ("M-h" . helm-beginning-of-buffer)
-	      ("M-H" . helm-end-of-buffer))
  :config (progn
 	    (helm-mode 1)))
+#+END_SRC
+*** Helm-projectile
+Project management.
+#+BEGIN_SRC emacs-lisp :tangle no
+(use-package helm-projectile
+  :ensure t
+  :bind ("M-t" . helm-projectile-find-file)
+  :config
+(helm-projectile-on))
+#+END_SRC
+
+#+BEGIN_SRC emacs-lisp
+(use-package projectile
+  :ensure t
+  :commands (projectile-find-file projectile-switch-project)
+  :diminish projectile-mode
+  :init
+  (use-package helm-projectile
+    :ensure t
+    :bind (("M-p" . helm-projectile-find-file)
+           ("M-P" . helm-projectile-switch-project)))
+  :config
+(projectile-global-mode))
 #+END_SRC
 ** company-mode
 Modular in-buffer completion framework for Emacs
@@ -744,7 +768,7 @@ Cell +91 9496354518")
   (find-file "~/.emacs.d/init.el"))
 (defun open-my-init-org-file()
   (interactive)
-  (find-file "~/.emacs.d/init.el"))
+  (find-file "~/.emacs.d/config.org"))
 
 (global-set-key (kbd "<f2>") 'open-my-init-file)
 (global-set-key (kbd "<f3>") 'open-my-init-org-file)
