--- a/config.org
+++ b/config.org
@@ -85,7 +85,7 @@ Cursor settings:
 ** Font
  #+BEGIN_SRC emacs-lisp
 (set-face-attribute 'default nil
-		    :family "Source Code Pro"
+		    :family "SauceCodePro"
 		    :height 160
 		    :weight 'normal
 :width 'normal) 
@@ -211,23 +211,19 @@ mine for demonstration purposes for novice or non-Org-users.
 had to disable it]]. Maybe I'd give it another try in a couple of months
 or so.
 ** Export plugins
-ox-pandoc
+*** ox-pandoc
 #+BEGIN_SRC emacs-lisp
-;; Pandoc
 (use-package ox-pandoc
   :defer 1
   :ensure t)
 #+END_SRC
-
-ox-twbs; orgMode to twitter bootstrap
+*** ox-twbs; orgMode to twitter bootstrap
 #+BEGIN_SRC emacs-lisp
-;~~~~~~~~~~~~~~~~~~~~
 (use-package ox-twbs
   :ensure t
   :init (require 'ox-twbs ))
 #+END_SRC
-
-Publishing project
+*** Publishing project
 #+BEGIN_SRC emacs-lisp
 (setq org-publish-project-alist
       '(("org-notes"
@@ -250,6 +246,23 @@ Publishing project
                         (file-name-as-directory (expand-file-name dest))
                         (file-name-sans-extension rel)
                         ".html"))))
+#+END_SRC
+*** ox-beamer - Beamer export
+#+BEGIN_SRC emacs-lisp
+(setq org-export-backends (quote (
+       beamer
+       latex)))
+#+END_SRC
+*** DISABLED ox-reveal
+#+BEGIN_SRC emacs-lisp
+(use-package ox-reveal
+:ensure ox-reveal)
+
+(setq org-reveal-root "http://cdn.jsdelivr.net/reveal.js/3.0.0/")
+(setq org-reveal-mathjax t)
+
+(use-package htmlize
+:ensure t)
 #+END_SRC
 ** Agenda files
 #+BEGIN_SRC emacs-lisp
