--- a/config.org
+++ b/config.org
@@ -66,44 +66,6 @@ Configure the package manager of my GNU/Emacs.
   #+BEGIN_SRC emacs-lisp
   (server-start)
   #+END_SRC
-* Styling
-Show current column:
-#+BEGIN_SRC emacs-lisp
-(setq column-number-mode t)
-#+END_SRC
-
-
-Disable scroll-bar
-#+BEGIN_SRC emacs-lisp
-(toggle-scroll-bar -1)
-#+END_SRC
-
-Flat mode-line styling:
-2014-05-24: from http://www.reddit.com/r/emacs/comments/23l9oi/flat_modeline/
-#+BEGIN_SRC emacs-lisp
-(set-face-attribute 'mode-line nil :box nil)
-(set-face-attribute 'mode-line-inactive nil :box nil)
-#+END_SRC
-
-My favorite dark themes: wombat, misterioso, zenburn, material
-#+BEGIN_SRC emacs-lisp
-(load-theme 'wombat t) ;; dark theme
-#+END_SRC
-
-Cursor settings:
-#+BEGIN_SRC emacs-lisp
-;; Prevent the cursor from blinking
-(blink-cursor-mode 0)
-(set-cursor-color "IndianRed")
-#+END_SRC
-** Font
- #+BEGIN_SRC emacs-lisp
-(set-face-attribute 'default nil
-		    :family "SauceCodePro"
-		    :height 160
-		    :weight 'normal
-:width 'normal) 
- #+END_SRC
 * Flycheck
 
 «[[http://www.flycheck.org/][Flycheck]] is a modern on-the-fly syntax checking extension for GNU
@@ -337,13 +299,12 @@ Evil-leader keyboard bindings
   (evil-leader/set-key
     ","  'other-window
     "."  'mode-line-other-buffer
-    ":"  'eval-expression
     "b"  'helm-mini             ;; Switch to another buffer
     "c"  'comment-dwim
     "d"  'helm-imenu            ;; Jump to function in buffer
     "g"  'magit-status
     "p"  'helm-show-kill-ring
-    ;; "s"  'ag-project            ;; Ag search from project's root
+    "/"  'swiper            ;; Ag search from project's root
     ;; "y" 'yank-to-x-clipboard
     "o"  'delete-other-windows  ;; C-w o
     "m"  'my-org-publish-buffer
@@ -803,6 +764,17 @@ Change terminal color and shape while using emacs in terminal
        (setq evil-emacs-state-cursor  'bar)  ; ⎸
   )
 #+END_SRC
+* Babel
+** Dont ask for confirmation
+#+BEGIN_SRC emacs-lisp
+(setq org-confirm-babel-evaluate nil)
+#+END_SRC
+** Enable Graphviz
+#+BEGIN_SRC emacs-lisp
+(org-babel-do-load-languages
+ 'org-babel-load-languages
+ '((dot . t))) ; this line activates dot
+#+END_SRC
 * Key bindings
 ** Save buffer with ctrl-s
 #+BEGIN_SRC emacs-lisp
@@ -824,14 +796,44 @@ Change terminal color and shape while using emacs in terminal
 (global-set-key (kbd "<f2>") 'open-my-init-file)
 (global-set-key (kbd "<f3>") 'open-my-init-org-file)
 #+END_SRC
-* Babel
-** Dont ask for confirmation
+* Styling
+Show current column:
 #+BEGIN_SRC emacs-lisp
-(setq org-confirm-babel-evaluate nil)
+(setq column-number-mode t)
 #+END_SRC
-** Enable Graphviz
+
+
+Disable scroll-bar
 #+BEGIN_SRC emacs-lisp
-(org-babel-do-load-languages
- 'org-babel-load-languages
- '((dot . t))) ; this line activates dot
+(toggle-scroll-bar -1)
 #+END_SRC
+
+Flat mode-line styling:
+2014-05-24: from http://www.reddit.com/r/emacs/comments/23l9oi/flat_modeline/
+#+BEGIN_SRC emacs-lisp
+(set-face-attribute 'mode-line nil :box nil)
+(set-face-attribute 'mode-line-inactive nil :box nil)
+#+END_SRC
+
+My favorite dark themes: wombat, misterioso, zenburn, material
+#+BEGIN_SRC emacs-lisp
+(load-theme 'wombat t) ;; dark theme
+#+END_SRC
+
+Cursor settings:
+#+BEGIN_SRC emacs-lisp
+;; Prevent the cursor from blinking
+(blink-cursor-mode 0)
+(set-cursor-color "IndianRed")
+#+END_SRC
+
+#+RESULTS:
+
+** Font
+ #+BEGIN_SRC emacs-lisp
+(set-face-attribute 'default nil
+		    :family "SauceCodePro"
+		    :height 160
+		    :weight 'normal
+:width 'normal) 
+ #+END_SRC
