--- a/config.org
+++ b/config.org
@@ -171,7 +171,7 @@ Opening image files with external viewer:
 			       ("\\.pptx\\'" . default)
 			       ) org-file-apps ))))
 #+END_SRC
-** DISABLED org-mind-map
+** org-mind-map
 
 I found [[https://github.com/theodorewiles/org-mind-map][org-mind-map]] via an [[http://irreal.org/blog/?p=6561][article on irreal]].
 
@@ -181,12 +181,14 @@ mine for demonstration purposes for novice or non-Org-users.
 
 #+BEGIN_SRC emacs-lisp
   (use-package org-mind-map
-    ;;:ensure t
+    :ensure t
     :defer 15
-    :load-path "~/.emacs.d/contrib/org-mind-map/"
-    :config ;; executed after loading package
   )
 #+END_SRC
+
+2018-07-29: Working now. Run M-x org-mind-map-write within the org-mode file you would like 
+to make a mind-map for. If all works as expected, a PDF file will be generated 
+in the same directory as the org file.
 
 2017-10-14: Unfortunately, I do have [[https://github.com/theodorewiles/org-mind-map/issues/13][issues with this tool so that I
 had to disable it]]. Maybe I'd give it another try in a couple of months
