--- a/config.org
+++ b/config.org
@@ -571,16 +571,19 @@ prevent company from completing on its own when we type Space or dot
              htmlize-many-files-dired
              htmlize-region))
 #+END_SRC
-** DISABLED mu4e & mail settings
+** mu4e & mail settings
 - Dependencies
-	- libtool
-	- automake
-	- autoconf
+  - libtool
+  - automake
+  - autoconf
+  - w3m; for html mail
 
 - Reference
-	- [[https://www.djcbsoftware.nl/code/mu/mu4e/Installation.html][mu4e]]
-	- [[https://ryanmcconville.com/blog/post/offlineimap-with-outlook365/][offlineimap-office365]]
-	- [[http://prodissues.com/2016/02/adding-mu4e-support-to-emacs.html][mu4e, tutorial]]
+  - [[https://www.djcbsoftware.nl/code/mu/mu4e/Installation.html][mu4e]]
+  - [[https://ryanmcconville.com/blog/post/offlineimap-with-outlook365/][offlineimap-office365]]
+  - [[http://prodissues.com/2016/02/adding-mu4e-support-to-emacs.html][mu4e, tutorial]]
+  - [[http://www.macs.hw.ac.uk/~rs46/posts/2014-01-13-mu4e-email-client.html][Drowning in email, mu4e to the rescue]]
+  - [[https://wiki.archlinux.org/index.php/Pass][Pass; Password Management]]
 
 #+BEGIN_SRC emacs-lisp
 (add-to-list 'load-path "/usr/local/share/emacs/site-lisp/mu4e")
@@ -588,7 +591,7 @@ prevent company from completing on its own when we type Space or dot
 (require 'mu4e)
 
 ;; default
-(setq mu4e-maildir "~/Mail/sm")
+(setq mu4e-maildir "~/mail/work")
 ;;(setq mu4e-drafts-folder "/[Gmail].Drafts")
 ;;(setq mu4e-sent-folder   "/[Gmail].Sent Mail")
 ;;(setq mu4e-trash-folder  "/[Gmail].Trash")
@@ -610,9 +613,18 @@ prevent company from completing on its own when we type Space or dot
        ("/[Gmail].All Mail"    . ?a)))
 
 ;; allow for updating mail using 'U' in the main view:
-(setq mu4e-get-mail-command "offlineimap")
+(setq mu4e-get-mail-command "mbsync -a")
+
+;;rename files when moving
+;;NEEDED FOR MBSYNC
+(setq mu4e-change-filenames-when-moving t)
+
+;;set up queue for offline email
+;;use mu mkdir  ~/Maildir/queue to set up first
+(setq smtpmail-queue-mail nil  ;; start in normal mode
+      smtpmail-queue-dir   "~/mail/work/queue/cur")
 #+END_SRC
-*** offlineimaprc
+*** offlineimaprc; Use isync/mbsync
 #+BEGIN_SRC
 # Sample minimal config file.  Copy this to ~/.offlineimaprc and edit to
 # get started fast.
@@ -642,65 +654,54 @@ folderfilter = lambda folder: folder in ['INBOX', 'Sent', 'Sent Items']
 sslcacertfile = /etc/ssl/certs/ca-certificates.crt
 # sslcacertfile = OS-DEFAULT
 #+END_SRC
+*** mbsyncrc
+#+BEGIN_SRC sh
+IMAPAccount work
+Host outlook.office365.com
+User sarath.m@tataelxsi.co.in
+PassCmd "pass Mail/outlook3"
+UseIMAPS yes
+CertificateFile /etc/ssl/certs/ca-certificates.crt
+
+IMAPStore work-remote
+Account work
+
+MaildirStore work-local
+Path ~/mail/work/
+Inbox ~/mail/work/Inbox
+
+Channel work
+Master :work-remote:
+Slave :work-local:
+# Or include everything
+#Patterns "INBOX" "Other" "Archive" "Drafts" "Deleted Items"
+Patterns "INBOX"
+# Automatically create missing mailboxes, both locally and on the         server
+Create Both
+Expunge Both
+# Save the synchronization state files in the relevant directory
+SyncState *
+#+END_SRC
 *** TLS config
 #+BEGIN_SRC emacs-lisp
 (require 'starttls)
 (setq starttls-use-gnutls t)
 #+END_SRC
-*** Outgoing mail settings
-#+BEGIN_SRC emacs-lisp
-(require 'smtpmail)
-(setq send-mail-function  'smtpmail-send-it
-      message-send-mail-function    'smtpmail-send-it
-      smtpmail-auth-credentials     (expand-file-name "~/.authinfo")
-      smtpmail-smtp-server  "smtp.office365.com"
-      smtpmail-stream-type  'starttls
-      smtpmail-smtp-service 587)
-#+END_SRC
-*** Default mail settings
-general emacs mail settings; used when composing e-mail.
-The non-mu4e-* stuff is inherited from emacs/message-mode
-#+BEGIN_SRC emacs-lisp
-(setq mu4e-reply-to-address "sarath.m@tataelxsi.co.in"
-      user-mail-address "sarath.m@tataelxsi.co.in"
-      user-full-name  "Sarath.M")
-(setq mail-signature
-    "Thanks & Regards
-Sarath M
-Senior Engineer - JLR TML
-TATA ELXSI
-Techno Park Campus, Kariyavattom,  Trivandrum  Kerala 695 581
-Cell +91 9496354518")
-#+END_SRC
-*** Kill message buffers on exit
-#+BEGIN_SRC emacs-lisp
-(setq message-kill-buffer-on-exit t)
-#+END_SRC
-*** Encrypt OfflineIMAP and msmtp password with GnuPG
-- [[http://f-koehler.github.io/posts/2015-03-17-offlineimap-msmtp-gnupg.html][Reference]]
-1. Put this code in home folder
-#+BEGIN_SRC python
-  import subprocess                                                             
-                                                                                
-  def mailpasswd():                                                             
-      path = "/home/sm/.mail_pwd.gpg"                                           
-      return subprocess.check_output(["gpg2", "--quiet", "--batch", "-d",       
-  path]).strip()                                                                
-
-  if __name__ == '__main__':                                                    
-      mailpasswd() 
-#+END_SRC
-*** Addressbook
-- To use shorthand; Create a file ~/.mailrc and use it to create alias names
-    #+BEGIN_SRC
-    alias sm sarath.m@tataelxsi.co.in
-    alias at anshul.tripathi@tataelxsi.co.in
-    alias apd anjana.p@tataelxsi.co.in
-    alias re robin@tataelxsi.co.in
-    #+END_SRC
-- Aliases will be autocompleted on typing comma
-- To seperate several mail id's use comma.
 *** Password Management
+**** Method1
+***** authinfo.gpg
+1) Create a temporary file ~/.authinfo and store 
+   the following plain text in there, replacing host, 
+   username, password & port information for your settings:
+   #+BEGIN_SRC
+   machine smtp.office365.com login user@domain.co.in port 587 password abcdefgh
+   #+END_SRC
+2) Generate the encrypted file with .
+   #+BEGIN_SRC sh
+   gpg2 --output ~/.authinfo.gpg --symmetric ~/.authinfo
+   #+END_SRC
+3) Remove the ~/.authinfo file. 
+**** Method2
 1. Setup up GPG user id. [[https://kb.iu.edu/d/awio][Reference]]
 2. Setup *pass* password manager. [[https://www.passwordstore.org][Reference]]
 3. Create a new password & insert in *pass* using
@@ -718,6 +719,62 @@ Cell +91 9496354518")
    #+END_SRC
 5. Done
 - To update password use GNU *pass*
+**** Encrypt OfflineIMAP and msmtp password with GnuPG
+- [[http://f-koehler.github.io/posts/2015-03-17-offlineimap-msmtp-gnupg.html][Reference]]
+1. Put this code in home folder
+#+BEGIN_SRC python
+  import subprocess                                                             
+                                                                                
+  def mailpasswd():                                                             
+      path = "/home/sm/.mail_pwd.gpg"                                           
+      return subprocess.check_output(["gpg2", "--quiet", "--batch", "-d",       
+  path]).strip()                                                                
+
+  if __name__ == '__main__':                                                    
+      mailpasswd() 
+#+END_SRC
+*** Outgoing mail settings
+#+BEGIN_SRC emacs-lisp
+(require 'smtpmail)
+(setq send-mail-function  'smtpmail-send-it
+      message-send-mail-function    'smtpmail-send-it
+      smtpmail-auth-credentials     (expand-file-name "~/.authinfo.gpg")
+      smtpmail-smtp-server  "smtp.office365.com"
+      smtpmail-stream-type  'starttls
+      smtpmail-smtp-service 587)
+#+END_SRC
+*** Default mail settings
+general emacs mail settings; used when composing e-mail.
+The non-mu4e-* stuff is inherited from emacs/message-mode
+#+BEGIN_SRC emacs-lisp
+(setq mu4e-reply-to-address "sarath.m@tataelxsi.co.in"
+      user-mail-address "sarath.m@tataelxsi.co.in"
+      user-full-name  "Sarath.M")
+#+END_SRC
+*** Email Signature
+#+BEGIN_SRC emacs-lisp
+(setq mu4e-compose-signature
+   "Thanks & Regards
+Sarath M
+Senior Engineer - JLR TML
+TATA ELXSI
+Techno Park Campus, Kariyavattom, Trivandrum Kerala 695 581
+Cell +91 9496354518")
+#+END_SRC
+*** Kill message buffers on exit
+#+BEGIN_SRC emacs-lisp
+(setq message-kill-buffer-on-exit t)
+#+END_SRC
+*** Addressbook
+- To use shorthand; Create a file ~/.mailrc and use it to create alias names
+    #+BEGIN_SRC
+    alias sm sarath.m@tataelxsi.co.in
+    alias at anshul.tripathi@tataelxsi.co.in
+    alias apd anjana.p@tataelxsi.co.in
+    alias re robin@tataelxsi.co.in
+    #+END_SRC
+- Aliases will be autocompleted on typing comma
+- To seperate several mail id's use comma.
 ** beacon mode
 This package highlights the cursor every time it jumps abruptedly from a
 place to another (e.g. when changing windows and so on).
