--- a/config.org
+++ b/config.org
@@ -612,9 +612,6 @@ prevent company from completing on its own when we type Space or dot
        ("/[Gmail].Trash"       . ?t)
        ("/[Gmail].All Mail"    . ?a)))
 
-;; allow for updating mail using 'U' in the main view:
-(setq mu4e-get-mail-command "mbsync -a")
-
 ;;rename files when moving
 ;;NEEDED FOR MBSYNC
 (setq mu4e-change-filenames-when-moving t)
@@ -681,6 +678,10 @@ Create Both
 Expunge Both
 # Save the synchronization state files in the relevant directory
 SyncState *
+#+END_SRC
+*** Index maildir using mu
+#+BEGIN_SRC sh
+mu index --maildir=~/mail/work
 #+END_SRC
 *** TLS config
 #+BEGIN_SRC emacs-lisp
@@ -750,6 +751,17 @@ The non-mu4e-* stuff is inherited from emacs/message-mode
 (setq mu4e-reply-to-address "sarath.m@tataelxsi.co.in"
       user-mail-address "sarath.m@tataelxsi.co.in"
       user-full-name  "Sarath.M")
+#+END_SRC
+*** get mail
+#+BEGIN_SRC emacs-lisp
+; get mail
+(setq mu4e-get-mail-command "mbsync -c ~/.emacs.d/.mbsyncrc work"
+      mu4e-html2text-command "w3m -T text/html")
+#+END_SRC
+*** DISABLED Auto-update
+#+BEGIN_SRC emacs-lisp
+(setq mu4e-update-interval 120
+      mu4e-headers-auto-update t)
 #+END_SRC
 *** Email Signature
 #+BEGIN_SRC emacs-lisp
